Update Java version